# AutonomousTurtleBot

./: README.md
Archive/0728구김최/src/process_video/: package.xml
Archive/0728구김최/src/process_video/msg/: mat_msg.msg
Archive/0728구김최/src/process_video/src/: pub_video.cpp
Archive/0728구김최/src/test_opencv/: CMakeLists.txt  package.xml
Archive/0728구김최/src/test_opencv/src/: ex1.cpp  ex2.cpp  ex3.cpp  opencv_test1.cpp  std1.cpp
Archive/0728구김최/src/test_package1/: CMakeLists.txt  package.xml
Archive/0728구김최/src/test_package1/launch/: union.launch
Archive/0728구김최/src/test_package1/src/: pub1.cpp  sub1.cpp
Archive/0728구김최/src/traffic_light/: CMakeLists.txt  package.xml
Archive/0728구김최/src/traffic_light/msg/: Res_Color.msg
Archive/0728구김최/src/traffic_light/src/: .check_color.cpp.swo  .check_color.cpp.swp  check_color.cpp
Archive/0728구김최/src/which_way/: CMakeLists.txt  package.xml
Archive/0728구김최/src/which_way/launch/: robot.launch
Archive/0728구김최/src/which_way/msg/: theta.msg
Archive/0728구김최/src/which_way/src/: OPS.cpp  PUB.cpp  calculate_theta.cpp  determinant.cpp  input_video.cpp  lane_trace.cpp  move_bot.cpp  stop_bot.cpp
Videos/: 0707.avi
src/Robot/process_video/: CMakeLists.txt
src/Robot/process_video/launch/: union.launch
src/Robot/process_video/src/: pub_video.cpp  sub_video.cpp
src/Server/fin/: CMakeLists.txt  package.xml
src/Server/fin/src/: cross.cpp  fastmove.cpp  light.cpp
